# scD2P

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: quick_start.py
scD2P/: __init__.py  benchmarking.py  enrichment.py  metrics.py  model.py  pathway_overlap.py  utils.py
scd2p/: __init__.py  benchmarking.py  enrichment.py  metrics.py  model.py  pathway_overlap.py
